tests/baselines/reference/typeParameterConstrainedToOuterTypeParameter.errors.txt
tests/cases/compiler/typeParameterConstrainedToOuterTypeParameter.ts(10,5): error TS2322: Type 'A<文字>' is not assignable to type 'B<文字>'.
  Types of parameters 'x' and 'x' are incompatible.
    Type 'U' is not assignable to type '文字[]'.
      Type '文字' is not assignable to type '文字[]'.


==== tests/cases/compiler/typeParameterConstrainedToOuterTypeParameter.ts (1 errors) ====
    interface A<T> {
        <U extends T>(x: U[])
    }
    
    interface B<T> {
        <U extends T>(x: U)
    }
    
    var a: A<string>
    var b: B<string> = a; // assignment should be legal (both U's get instantiated to any for comparison)
        ~
!!! error TS2322: Type 'A<文字>' is not assignable to type 'B<文字>'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type 'U' is not assignable to type '文字[]'.
!!! error TS2322:       Type '文字' is not assignable to type '文字[]'.